# CLion2017_1Demo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CPP14_support/: CMakeLists.txt  generalized_lambda_captures.cpp  generic_lambdas.cpp  return_type_deduction.cpp  variable_templates.cpp
CPP17_support/: CMakeLists.txt  nested_namespaces.cpp
CPP_improvements/: CMakeLists.txt  cpp_fixes.cpp
catch_test/: CMakeLists.txt  sample_lib.cpp  sample_lib.h  sample_test.cpp
disassembly_debug/: CMakeLists.txt  disasm.cpp
make_auto/: CMakeLists.txt  convert_to_auto.cpp
point_lib/: Point.h
precompiled_header/: CMakeLists.txt
